## uncommitted

- Add automatic inclusion of default domain encoders
- Add dynamic CSS dependency handling for result visualizers
- Add MFA table visualizer
- Add propositional domain encoder