@@ -1,7 +1,8 @@
 {
-    "corresponding_data": false,
+    "type": "coverage",
     "data.train": "data/Ragni2016.csv",
-    "data.test": "data/Veser2018.csv",
+    "data.test": "data/Ragni2016.csv",
+    "corresponding_data": true,
     "domains": ["syllogistic"],
     "response_types": ["single-choice"],
     "models": [
